@@ -1,5 +1,10 @@
 2006-05-17  James Turner  <james@worldforge.org>
 
+	* Eris/DeleteLaters.cpp: switch the delete later queue to be a deque
+	  instead of a vector, and hence preserve order of items to be deleted.
+
+2006-05-17  James Turner  <james@worldforge.org>
+
 	* Eris/Account.cpp: no longer disconnect the connection when logout
 	  from the account completes.
 
